--- a/public/stylesheets/grayscale.css
+++ b/public/stylesheets/grayscale.css
@@ -16,8 +16,14 @@ body {
 }
 
 .carousel-inner {
-    height: 100%;
+  height: 100%;
 }
+
+
+.carousel-inner {
+    max-height: 500px;
+}
+
 
 /* Background images are set within the HTML using inline CSS, not here */
 
@@ -43,8 +49,8 @@ footer {
 
 
 
-.carousel-inner>.item>img {
+.slider-image img {
     display: block;
     max-width: 100%;
-    height: 500;
+    max-height: 500px ;
 }
